[fix] flex spacing

--- a/_sass/3-modules/_logos.scss
+++ b/_sass/3-modules/_logos.scss
@@ -6,7 +6,7 @@
 
 .logos__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   margin: -$base-spacing-unit;
